--- a/Módulo 03/exercícios/ex022/fundo006.html
+++ b/Módulo 03/exercícios/ex022/fundo006.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de imagem de fundo</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
+            /* Shorthand - background 
+                color > image > position > repeat > [size] > attachament
+            */
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px; 
             margin: auto; 
             border: 1px solid darkblue;
@@ -31,7 +37,15 @@
     <h1>teste</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor necessitatibus facere distinctio, accusamus repellat nesciunt? Quisquam fugit, explicabo ullam optio necessitatibus quae recusandae adipisci! Molestias nostrum fuga laboriosam beatae cumque.
     Blanditiis, nisi ipsum quia non perspiciatis magnam accusamus expedita assumenda qui ipsam. Voluptate modi repellat possimus, accusantium reiciendis quos inventore expedita nesciunt voluptatibus quam id nihil quas magnam eligendi totam.
-    Dolore, odio nobis id quas hic cumque ut voluptates architecto? Doloremque nam rem incidunt corporis accusantium amet, asperiores velit iste quod dolorum explicabo fugit, nisi magni! Sit, officiis? Reiciendis, quaerat.</p>
+    Dolore, odio nobis id quas hic cumque ut voluptates architecto? Doloremque nam rem incidunt corporis accusantium amet, asperiores velit iste quod dolorum explicabo fugit, nisi magni! Sit, officiis? Reiciendis, quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magnam delectus repellendus temporibus magni adipisci quam similique aliquam ut harum quisquam recusandae culpa excepturi sapiente accusamus, exercitationem consequuntur modi nulla!
+    Laboriosam pariatur excepturi quas repellendus placeat voluptas expedita magni est quae iure! Facere veritatis enim, veniam ab consequatur laudantium porro tenetur rem molestiae deleniti nam repellat voluptatum voluptas odit minus?
+    Veniam facere cupiditate nemo, ea, sunt corporis libero ut laboriosam accusamus dolor velit debitis incidunt culpa. Nostrum debitis aliquid maxime et, possimus placeat eos, commodi ipsa perferendis quo quia omnis?
+    Iure repellendus dolores hic rerum facilis deserunt facere. Sit quia maxime quidem, dolor reiciendis accusamus molestiae dolores nulla eum quam consequatur magnam. Velit tenetur ea aliquam, quod dignissimos rerum consequatur.
+    Veritatis, nesciunt provident animi illum quibusdam labore dolore accusamus alias amet. Dolores qui saepe quo facilis ut aspernatur beatae adipisci! Sit ad unde iusto sequi distinctio, pariatur expedita neque vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis facilis ad possimus illum culpa minima dicta sit recusandae voluptates. Voluptate illo iste deleniti dolor aspernatur, ad laborum minima labore fuga!
+    Natus, aperiam. Beatae deserunt qui, aspernatur a magni mollitia reprehenderit, dolorem sapiente atque quibusdam aliquam fuga consequuntur porro, neque magnam! Eos, sunt consectetur! Odio labore in dolorum quisquam, aspernatur quae?
+    Ratione labore, doloremque, architecto quam in quasi sunt, commodi iste ut pariatur exercitationem libero minus numquam alias non necessitatibus esse expedita minima repudiandae quod id maiores! Libero voluptates molestias et.
+    A ipsam veritatis at nobis asperiores perspiciatis vitae. Dolore cumque nemo facere adipisci aliquid ipsam eligendi laboriosam inventore minus, beatae fugiat facilis dolores molestiae assumenda eum magni? Exercitationem, quasi optio.
+    Similique, sint molestiae nisi voluptate odit amet qui temporibus atque labore corrupti saepe magnam ipsa tempora a et numquam doloribus laborum. Fuga tenetur placeat dolore, sint alias quisquam sit praesentium!</p>
     </main>
 </body>
 </html>
