--- a/Módulo 04/exercicios/ex026/mq005/index.html
+++ b/Módulo 04/exercicios/ex026/mq005/index.html
@@ -6,8 +6,9 @@
     <title>Projeto menu hambúrguer</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
         <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">
@@ -44,7 +45,15 @@
             itens.style.display = 'block'
            }
         }
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
     </script>
-    
+
 </body>
 </html>
